--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ keywords:       Awesome, website, keywords
         </div>
     </div>
 
-    <header data-400="top:0%" data-1000="top: -100%;">
+    <header data-600="top:0%" data-1100="top: -100%;">
         <!--<video id="example_video_1" class="full-video visible-lg" 
             poster="http://video-js.zencoder.com/oceans-clip.png"
             data-setup='{"autoplay": true, "controls": false, "loop": true}'>
@@ -28,7 +28,7 @@ keywords:       Awesome, website, keywords
         <div class="container">
             <div class="row vert-center story-width">
                 <div class="col-12 text-center">
-                    <div class="jumbotron" data-50="margin-top: 0%;" data-1000="margin-top: -50%;">
+                    <div class="jumbotron" data-50="margin-top: 0%;" data-800="margin-top: -100%;">
                         <img src="{{ site.url }}/img/logo.png">
                         <h1>Awesome websites that <br><span>tell a story</span></h1>
                         <p><a href="#intro" data-menu-top="2000" class="btn btn-large"><strong>surfen</strong> nieuwe stijl - lees ons verhaal</a></p>
@@ -65,15 +65,15 @@ keywords:       Awesome, website, keywords
                          <h3 data-1650="opacity:0; top:20%" data-1800="opacity:1; top: 0%;">Het gaat om je <em>idee</em> en hoe goed je het presenteert.</h3>
                     </div>
                     <div class="col-12 col-sm-8" data-1550="opacity:0; top:20%" data-1900="opacity:1; top: 0%;">
-                        <p>COAST vertelt je verhaal en biedt je bezoekers een unieke online ervaring die ze raakt en inspireert. De manier om je bedrijf, product of dienst te presenteren op een manier die wel resultaat oplevert.</p>
+                        <p>Met COAST vertel je je verhaal op een manier die (web)surfers raakt en inspireert. Een online beleving gerciht op resultaat.</p>
                             <p><strong>De eigenschappen?</strong></p>
-                          <p data-1550="opacity:0; top:20%" data-1900="opacity:1; top: 0%;">Coast websites zijn <a href"#focus">gefocust</a> op wat belangrijk is , met de hand <a href="#design">ontworpen</a>, ontwikkeld met de allerlaatste <a href="#techniek">webtechnieken</a> en ook nog eens <a href="#betaalbaar">betaalbaar</a>.
+                          <p data-1550="opacity:0; top:20%" data-1900="opacity:1; top: 0%;">Coast websites zijn <a href"#focus">gefocust</a> en resultaatgericht , met de hand <a href="#design">ontworpen</a>, ontwikkeld met de allerlaatste <a href="#techniek">webtechnieken</a> en ook nog eens <a href="#betaalbaar">betaalbaar</a>.
                         </p>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12">
-                        <a href="#focus" data-menu-top="2600"><i class="icon-arrow-down"></i> scroll verder en lees waarom COAST is wat het is</a>
+                    <div class="col-md-8">
+                        <a href="#focus" class="btn btn-large btn-primary" data-menu-top="2600"><i class="icon-arrow-down"></i>de focus van Coast</a>
                     </div>
                 </div>
             </div>
